--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "morilog/jalali": "3.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -35,6 +36,10 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files":[
+            "app/Http/helpers.php",
+            "app/Http/dates.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
