--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "kavenegar/laravel": "^1.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "morilog/jalali": "3.*"
