--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,10 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # ir to com redirect
+    RewriteCond %{HTTP_HOST} ^koofterizeh.ir [NC,OR]
+    RewriteCond %{HTTP_HOST} ^www.koofterizeh.ir [NC]
+    RewriteRule ^(.*)$ http://koofterizeh.com/$1 [L,R=301,NC]
+
 </IfModule>
